main.css
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');

/* reset */
* {
    box-sizing: border-box;
    overflow: none;
    max-height: 100%;
    max-width: 100%;
    padding: 0;
    margin: 0;
    border: 0;
    font-size: 100%;
}

/* varaiables */ 
:root {
    --h2-size: 3.6rem;
    --h3-color: #7D83FD;
    --h3-size: 4.8rem;
    --btn-color: #6500E7;
    --border-color: rgb(54, 54, 54);
    --icon-color: rgb(54, 54, 54);
    --project-card-color: #E5E5E5;
    --header-font: 'Red Hat Display';
    

}

/* global Stlyes */
html {
    font-size: 10px;
}

body {
    font-family: roboto, 'Red Hat Display', Helvetica;
}

h1 {
font-size: 14.4rem;
font-family: var(--header-font), roboto, Helvetica;
color: var(--icon-color);
width: 60%;
margin:-2% 0 5% 0;
}

h2 {
font-size: var(--h2-size);
color: white;
margin: 1% 0 10% 0;
width: 100%;
}

h3 {
font-size: var(--h3-size);
color: var(--h3-color);
border-left: 5px solid var(--border-color);
padding-left: 1%;
}

p {
    font-size: 1.8rem;
    font-weight: bold;
}

a {
    font-size: 2.4rem;
    color: white;
    text-decoration: none;
}

svg {
    position: absolute;
    right: 5rem;
    top: 5rem;
    display: none;
}


/* specific Styles */
.home-wrapper {
    height: 100vh;
    width: 100vw;
    padding-top: 2%;
    background-image: linear-gradient(to right, #7D83FD, #742BBE);
}

nav {
    text-align: right;
    margin: 1% 5% 5% 0;
}

nav a {
    font-size: 2rem;
    font-weight: bold;
    padding-left: 2%;
    cursor: pointer;
}

.headings-container {
    width: 80%;
    height: 70rem;
    margin: 0 0 0 10%;
}

.btn-container {
    width: 95%;
    display: flex;
    
}

.btn {
    text-align: center;
    display: inline-block;
    background-color: var(--btn-color);
    width: 30rem;
    height: 5rem;
    border-radius: 30px;
    cursor: pointer;
}

.btn p {
    margin: 5% auto;
}

.btn:nth-of-type(2){
    margin-left: 6%;
}


.body-wrapper {
    padding: 5% 5%;
}

#about {
    position: relative;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    margin:11% auto;
    height: 35rem;
    width: 90%;
    padding: 5%;
}

#about p {
    margin: 3% auto;
}

#about:nth-child(2){
    line-height:1.5
}

#about a {
    cursor: pointer;
}
.headshot {
    position: absolute;
    display: block;
    background-color: grey;
    height: 18rem;
    width: 18rem;
    margin-bottom: 3rem;
    border-radius: 50%;
    bottom: 27rem;
    right: 1rem;
}
.contact-info-container {
    display: flex;
    justify-content: space-between;
    margin-top: 3.9rem;
}

.icon-container i{
    padding-right: 3rem;
    cursor: pointer;
    
}

.icon-container .fab {
    color: black;
    margin-top: .3rem;
    font-size: 4rem;
    
}

h3:nth-of-type(2){
    display: inline-block;
    border-bottom: 5px solid var(--border-color);
    border-left: none;
}

h3:nth-of-type(3){
    display: inline-block;
    margin-left: 55%;
    border-bottom: 5px solid var(--border-color);
    border-left: none;
}

.skill-tools-container{
    position: relative;
    display: flex;
    justify-content: space-around;
    height: 50rem;
    width: 100%;
    margin-top: 5%;
}

.skills {
    display: flex;
    width: 45%;
    flex-wrap: wrap;
}

.skills::after {
    content: '';
    position: absolute;
    z-index: -100;
    background-color: #7D83FD;
    height: 105%;
    width: 45%;
    left: 4%;
    bottom: -1%;
    
}


.skills-card {
    padding: 5%;
    width: 30%;
    margin: .5rem auto;
    text-align: center;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    border-radius: 5%;
    background-color: white;
    font-size: 1.4rem;
}

.skills-card p {
    font-size: 1.4rem;
}

.tools {
    display: flex;
    flex-wrap: wrap;
    width: 30%;
}

.tools::after {
    content: '';
    position: absolute;
    z-index: -100;
    background-color: #7D83FD;
    height: 110%;
    width: 27%;
    left: 70%;
    bottom: -6%;
    
}

.tools-card {
    padding: 5%;
    width: 45%; 
    margin: .5rem auto;
    text-align: center;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    border-radius: 5%;
    background-color: white;
}

.tools-card p {
    font-size: 1.4rem;
}

.skill-tools-container i {
    font-size: 5rem;
    margin-bottom: 35%;
}

.ficon {
    font-family: helvetica;
    font-weight: bolder;
    line-height: 2.5;
    margin-top:10%;
    margin-bottom: 35%;
}

h3:nth-of-type(4){
    margin-top: 10%;
}

.projects {
    margin-top: 2%;
    display: flex;
    flex-wrap: wrap;
}

.project-card {
    position: relative;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    background-color: white;
    width: 29%;
    height: 45rem;
    margin: 2%;
    background-image: url(./images/code.jfif);
    background-size: cover;
}

.info-container {
    position: absolute;
    background-color: var(--project-card-color);
    bottom: 0;
    width: 100%;
    height: 40%;
    padding-top: 5%;
}

.proj-btn-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    height: 30%;
    padding-left: 1%;
    margin-bottom: 5%;
    margin-top: 3.5%;
}

.proj-btn {
    background-color: var(--btn-color);
    text-align: center;
    height: 3.5rem;
    width: 30%;
    margin: 5%;
    cursor: pointer;
}

.proj-btn p {
    font-size: 1.2rem;
    padding: 1rem
}

.tool-kit{
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
    height: 30%;
}

.tool-kit div {
    width: 25%;
}

.tool-kit p {
    text-align: center;
    padding: .7rem;
    font-size: 1.2rem;
    background-color: white;
    border-radius: 30px;
    height: 3rem;
}

h3:last-of-type {
    margin-top: 2%;
}

#contact {
    margin: 2% auto;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    width: 95%;
    height: 80%;
}

form {
    font-weight: bold;
    padding: 5%;
    margin-top:1%;
    width: 100%;
}

input {
    font-size: 2.4rem;
    height: 5rem;
    width: 95%;
    border: 1px solid black;
}

input:nth-of-type(3){
    height: 20rem;
}

label {
    font-size: 2.4rem;
    margin-top: 1%;
    display: block;
}

textarea {
    width: 95%;
    border: 1px solid black;
    font-size: 2.4rem;
    margin-bottom: 3%;
}

button {
    color: white;
    height: 5rem;
    width: 30rem;
    margin-top: 2%;
    background-color: var(--btn-color);
    border-radius: 30px;
    font-size: 1.8rem;
    font-weight: normal;
    border: none;
    cursor: pointer;
}



footer {
    display: flex;
    justify-content: space-between;
    background-color: var(--icon-color);
    height: 10rem;
    color: white;
    padding: 5%;
}

.footer-nav {
    margin: 0;
    text-align: right;
    width: 40%;
    
}

footer .icon-container {
    width: 30%;
}


footer p {
    text-align: center;
    margin-left: 9%;
    font-weight: normal;
}

footer a {
    font-weight: normal;
}

/* Tablet styles */
@media(max-width: 820px){

/* global styles */

h1 {
    font-size: 8.5rem;
    text-align: left;
    margin-right: 17%;
    
}

h2 {
    font-size: 2.4rem;
    margin-left: 21%;
}

h3 {
font-size: 3.6rem;
margin-top: 5%;
}

svg {
    display: inline-block;
}

/*specific styles */

nav svg{
    height: 2rem;
    width: 2rem;
}

nav a {
   margin-top: 25%;
}

header nav {
    display: none;
}

/* styles srop down menu */
.open {
    position: absolute;
    top: -1rem;
    right: -5rem;
    background: black;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5%;
    width: 50%;
    height: 100%;
}

.headings-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-top: 22%;
    margin: 0 7%;
    height: 100%;
    width:90%;
    overflow: hidden;
}

.btn {
    width: 20rem;
    height: 4rem;
    margin-left:7%;
}

.btn p {
  font-size: 1.4rem;
}

.headshot {
    top: -12rem;
    height: 15rem;
    width: 15rem;
}

#about {
    height: 29rem;
}

#about .btn {
    margin-left: 0;
    padding-top: .3rem;
}

#about p {
    font-size: 1.4rem;
}

.icon-container .fab {
    font-size: 3rem;
}

.skill-tools-container{
    position: relative;
    display: flex;
    justify-content: space-around;
    height: 50rem;
    width: 100%;
    margin-top: 5%;
}

.skills {
    display: flex;
    width: 45%;
    flex-wrap: wrap;
}

.skills::after {
    content: '';
    position: absolute;
    z-index: -100;
    background-color: #7D83FD;
    height: 45rem;
    width: 45%;
    left: 1%;
    top: -2%;
    
}


.skills-card {
    height: 13rem;
    font-size: 1.2rem;
}

.skills-card p {
    font-size: 1.2rem;
}


.tools::after {
    height: 46rem;
    left: 70%;
    bottom:2%;
    
}

.tools-card {
    padding: 5%;
    height: 13rem;
}

.tools-card p {
    font-size: 1.2rem;
}

.skill-tools-container i {
    font-size: 3rem;
    margin-top: 40%;
}

.ficon {
    margin-top: 50%;
    margin-bottom: 25%;
}

.projects {
    margin-top: 2%;
    display: flex;
    flex-direction: column;
}

.project-card {
    width: 95%;
}

label {
    font-size: 1.8rem;
}
input {
    font-size: 1.8rem;
}

textarea {
    font-size: 1.8rem;
}

button {
    font-size: 1.4rem;
   
}



footer {
    display: flex;
    justify-content: space-between;
    background-color: var(--icon-color);
    height: 10rem;
    color: white;
    padding: 5%;
}


footer .icon-container {
    width: 45%;
}

footer .fab {
    font-size: 2rem;
}


footer p {
    margin-top: 1%;
    font-size: .8rem;
}

.footer-nav {
    margin-left: 5%;
    width: 50%;
}

footer a {
    margin-top: 5%;
    font-size: 1.4rem;
}


}

